<resources>
    <string name="app_name">MobileAplication</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="select_date">Select Date</string>
</resources>